--- a/examples/nikita-ecs-testing/CMakeLists.txt
+++ b/examples/nikita-ecs-testing/CMakeLists.txt
@@ -7,7 +7,7 @@ set(${CMAKE_CXX_FLAGS} "${CMAKE_CXX_FLAGS} -fno-exceptions")
 set(LIB_DIR "${CMAKE_CURRENT_SOURCE_DIR}/lib")
 
 # Target
-set(SOURCES src/shader.cpp)
+set(SOURCES src/shader.cpp src/texture.cpp)
 include_directories(include)
 add_executable(${PROJECT_NAME} src/main.cpp ${SOURCES})
 
