Start implementing render system

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,8 +14,14 @@ file(GLOB_RECURSE TEST_SOURCES
         "${PROJECT_SOURCE_DIR}/test/*.h"
         "${PROJECT_SOURCE_DIR}/test/*.cpp")
 
+file(GLOB_RECURSE ENGINE_RENDER_SOURCES
+        "${PROJECT_SOURCE_DIR}/src/render/*.h"
+        "${PROJECT_SOURCE_DIR}/src/render/*.cpp")
+
+set(ENGINE_SOURCES ${ENGINE_RENDER_SOURCES})
+
 include_directories(include)
-add_executable(${PROJECT_NAME} src/main.cpp ${SOURCES})
+add_executable(${PROJECT_NAME} src/main.cpp ${ENGINE_SOURCES})
 add_executable(${TEST_TARGET} ${SOURCES} ${TEST_SOURCES})
 
 # GLFW
