--- a/examples/model_loading/CMakeLists.txt
+++ b/examples/model_loading/CMakeLists.txt
@@ -7,9 +7,11 @@ set(${CMAKE_CXX_FLAGS} "${CMAKE_CXX_FLAGS} -fno-exceptions")
 set(LIB_DIR "${CMAKE_CURRENT_SOURCE_DIR}/lib")
 
 # Target
-set(SOURCES "")
+file(GLOB_RECURSE SOURCES
+        "${PROJECT_SOURCE_DIR}/src/*.h"
+        "${PROJECT_SOURCE_DIR}/src/*.cpp")
 include_directories(include)
-add_executable(${PROJECT_NAME} src/main.cpp ${SOURCES})
+add_executable(${PROJECT_NAME} src/main.cpp ${SOURCES} ${ENGINE_SOURCES})
 
 # GLFW
 set(GLFW_DIR "${UNIVERSAL_LIB_DIR}/glfw")
