--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,5 @@
 *.png filter=lfs diff=lfs merge=lfs -text
 *.jpg filter=lfs diff=lfs merge=lfs -text
-assets/** filter=lfs diff=lfs merge=lfs -text
+*.mtl filter=lfs diff=lfs merge=lfs -text
+*.obj filter=lfs diff=lfs merge=lfs -text
+**/assets/** filter=lfs diff=lfs merge=lfs -text
