--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,7 +18,11 @@ file(GLOB_RECURSE ENGINE_RENDER_SOURCES
         "${PROJECT_SOURCE_DIR}/src/render/*.h"
         "${PROJECT_SOURCE_DIR}/src/render/*.cpp")
 
-set(ENGINE_SOURCES ${ENGINE_RENDER_SOURCES})
+file(GLOB_RECURSE ENGINE_INPUT_SOURCES
+        "${PROJECT_SOURCE_DIR}/src/input/*.h"
+        "${PROJECT_SOURCE_DIR}/src/input/*.cpp")
+
+set(ENGINE_SOURCES ${ENGINE_RENDER_SOURCES} ${ENGINE_INPUT_SOURCES})
 
 include_directories(include)
 add_executable(${PROJECT_NAME} src/main.cpp ${ENGINE_SOURCES})
