--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,23 +17,13 @@ file(GLOB_RECURSE TEST_SOURCES
         "${PROJECT_SOURCE_DIR}/test/*.h"
         "${PROJECT_SOURCE_DIR}/test/*.cpp")
 
-file(GLOB_RECURSE ENGINE_RENDER_SOURCES
-        "${PROJECT_SOURCE_DIR}/src/render/*.h"
-        "${PROJECT_SOURCE_DIR}/src/render/*.cpp")
-
-file(GLOB_RECURSE ENGINE_INPUT_SOURCES
-        "${PROJECT_SOURCE_DIR}/src/input/*.h"
-        "${PROJECT_SOURCE_DIR}/src/input/*.cpp")
-
-file(GLOB_RECURSE ENGINE_ECS_SOURCES
-        "${PROJECT_SOURCE_DIR}/src/ecs/*.h"
-        "${PROJECT_SOURCE_DIR}/src/ecs/*.cpp")
-
-set(ENGINE_SOURCES ${ENGINE_ECS_SOURCES} ${ENGINE_RENDER_SOURCES} ${ENGINE_INPUT_SOURCES} )
+file(GLOB_RECURSE ENGINE_SOURCES
+        "${PROJECT_SOURCE_DIR}/src/*.h"
+        "${PROJECT_SOURCE_DIR}/src/*.cpp")
 
 include_directories(include)
 add_library(${PROJECT_NAME} STATIC ${ENGINE_SOURCES})
-add_executable(${TEST_TARGET} ${TEST_SOURCES} ${ENGINE_SOURCES})
+add_executable(${TEST_TARGET} ${TEST_SOURCES})
 target_link_libraries(${TEST_TARGET} ${PROJECT_NAME})
 
 # GLFW
@@ -47,9 +37,6 @@ add_subdirectory("${GLFW_DIR}")
 target_link_libraries(${PROJECT_NAME} "glfw" "${GLFW_LIBRARIES}")
 target_include_directories(${PROJECT_NAME} PRIVATE "${GLFW_DIR}/include")
 
-target_link_libraries(${TEST_TARGET} "glfw" "${GLFW_LIBRARIES}")
-target_include_directories(${TEST_TARGET} PRIVATE "${GLFW_DIR}/include")
-
 # GLAD
 set(GLAD_DIR "${LIB_DIR}/glad")
 add_library("glad" "${GLAD_DIR}/src/glad.c")
@@ -58,18 +45,12 @@ target_include_directories("glad" PRIVATE "${GLAD_DIR}/include")
 target_include_directories(${PROJECT_NAME} PRIVATE "${GLAD_DIR}/include")
 target_link_libraries(${PROJECT_NAME} "glad" "${CMAKE_DL_LIBS}")
 
-target_include_directories(${TEST_TARGET} PRIVATE "${GLAD_DIR}/include")
-target_link_libraries(${TEST_TARGET} "glad" "${CMAKE_DL_LIBS}")
-
 # STB_IMAGE
 set(STB_DIR "${LIB_DIR}/stb_image")
 add_subdirectory(${STB_DIR})
 
 target_include_directories(${PROJECT_NAME} PRIVATE "${STB_DIR}/include")
 target_link_libraries(${PROJECT_NAME} "stb_image")
-
-target_include_directories(${TEST_TARGET} PRIVATE "${STB_DIR}/include")
-target_link_libraries(${TEST_TARGET} "stb_image")
 
 # GLM
 set(GLM_DIR "${LIB_DIR}/glm")
@@ -86,7 +67,6 @@ set(ASSIMP_BUILD_ASSIMP_TOOLS OFF CACHE BOOL "" FORCE)
 set(ASSIMP_BUILD_TESTS OFF CACHE BOOL "" FORCE)
 
 target_link_libraries(${PROJECT_NAME} "assimp")
-target_link_libraries(${TEST_TARGET} "assimp")
 
 # Other libs
 include_directories("${LIB_DIR}/other")
